docs: theme hacking

--- a/docs/swamp-lang/themes/deepthought/templates/base.html
+++ b/docs/swamp-lang/themes/deepthought/templates/base.html
@@ -70,7 +70,7 @@
   {% endif %}
 </head>
 
-<body class="has-background-white">
+<body class="has-background-white" theme="dark">
   <nav aria-label="section navigation" class="navbar is-light" role="navigation">
     <div class="container">
       <div class="navbar-brand">
@@ -168,7 +168,11 @@
 
   {% block footer %}
   <footer class="footer py-4">
-
+    <div class="content has-text-centered">
+      <p>
+Swamp Language &copy; 2024 Peter Bjorklund. All rights reserved.
+      </p>
+    </div>
   </footer>
   {% endblock %}
 
